feat(auth): 实现基于角色的菜单权限控制功能
- 新增 RoleService 提供角色管理功能，支持固定角色字典
- 在 SysUser 和 SysMenu 实体中添加角色相关字段
- 实现菜单访问权限控制，区分超级管理员和普通用户权限
- 添加按钮权限控制逻辑，根据用户角色返回相应权限
- 创建 RoleController 提供角色相关的 REST 接口
- 添加数据库脚本更新用户表和菜单表结构
- 实现角色菜单权限的保存和查询功能